# youtube_video_downloader

./: .gitignore  README.md  pyproject.toml
extension/: background.js  content.css  content.js  manifest.json  popup.html  popup.js
packaging/: README.md  build.ps1  installer.iss  launcher.py  make_icon.py  yt-downloader.spec
src/ytdownloader/: __init__.py  __main__.py  app.py  download_manager.py  history.py  ipc_server.py  main.py  queue_store.py  utils.py
