[project]
name = "yt-downloader"
version = "0.1.0"
description = "IDM-style desktop YouTube downloader (PyQt6 + yt-dlp)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "yt-dlp>=2024.1.1",
]

[project.scripts]
yt-downloader = "ytdownloader.main:main"

[project.gui-scripts]
yt-downloader-gui = "ytdownloader.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ytdownloader"]

[dependency-groups]
dev = ["pyinstaller>=6.0"]
