[project]
name = "yt-downloader"
version = "2.1.0"
description = "IDM-style desktop download manager — videos and any file (PyQt6 + yt-dlp + aria2c)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "yt-dlp>=2024.1.1",
]

[project.scripts]
yt-downloader = "ytdownloader.main:main"

[project.gui-scripts]
yt-downloader-gui = "ytdownloader.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ytdownloader"]

[dependency-groups]
dev = ["pyinstaller>=6.0"]
